--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/eatenjoy?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=ENC(IBCkdjeQKCcegmcSLrsAKQ==)
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ENC(HoMGsR4qXVrOcfes6lR2GouSxlvp38jMIMTsmmvJ8Lc=)
+spring.mail.password=ENC(4eJJq7gpshiLezPMogGCOko6GjwyYphTad8Vk0eZ/+Q=)
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
