--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.redis.host=localhost
 spring.redis.port=6379
+spring.redis.cache.host=localhost
 spring.redis.cache.port=6380
