--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.cache.host=localhost
 spring.redis.cache.port=6380
+
+file.root.path=eat-enjoy/files
